--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PAYSPRINT_JWT_KEY="UFMwMDE2MDA2NGM0OWQxNTk3Nzk0ODY3NmQ2YmM2YTY2Nzg3YzNmMA=="
-PAYSPRINT_AUTHORISED_KEY="MjQ5NmY3NGM1Y2NlZGUwYjgxNWNhNmUzZmVkYjRjOTY="
-PAYSPRINT_PARTNER_ID="PS001600"
+PAYSPRINT_JWT_KEY="UTA5U1VEQXdNREF4VFZSSmVrNUVWVEpPZWxVd1RuYzlQUT09"
+PAYSPRINT_AUTHORISED_KEY="TVRJek5EVTJOelUwTnpKRFQxSlFNREF3TURFPQ=="
+PAYSPRINT_PARTNER_ID="CORP00001"
 NODE_ENV=development
