--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PAYSPRINT_JWT_KEY="UTA5U1VEQXdNREF4VFZSSmVrNUVWVEpPZWxVd1RuYzlQUT09"
 PAYSPRINT_AUTHORISED_KEY="TVRJek5EVTJOelUwTnpKRFQxSlFNREF3TURFPQ=="
 PAYSPRINT_PARTNER_ID="CORP00001"
 NODE_ENV=development
+API_BASE_URL="https://uat.paysprint.in/sprintverify-uat/api/v1/"
